// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ReportsBookmarkForm > renders correctly 1`] = `
<div
  data-v-app=""
>
  
  <dialog-toolbar-stub
    color="white"
    data-v-44323e6a=""
    iconcolor="secondary-text"
    title="Save a report"
    titleicon=""
  />
  <v-card-stub
    border="false"
    class="elevation-0"
    data-v-44323e6a=""
    density="default"
    disabled="false"
    exact="false"
    flat="false"
    hover="false"
    loading="false"
    replace="false"
    ripple="true"
    tag="div"
    tile="false"
    variant="elevated"
  >
    <div
      class="dialog-content"
      data-v-44323e6a=""
    >
      <div
        class="px-3"
        data-v-44323e6a=""
      >
        
        <v-form-stub
          disabled="false"
          fastfail="false"
          modelvalue="true"
          validateon="input"
        >
          <v-row-stub
            dense="false"
            density="default"
            nogutters="false"
            tag="div"
          >
            <v-col-stub
              class="px-1 mb-2"
              cols="12"
              lg="false"
              md="false"
              sm="false"
              tag="div"
              xl="false"
              xxl="false"
            >
              <evocon-v-input-stub
                counter="50"
                filled="true"
                grow="false"
                hint="Name"
                maxlength="50"
                modelmodifiers="[object Object]"
                modelvalue=""
                persistent-hint=""
                placeholder="Name"
                required=""
                rules="(v) => !!v || _ctx.$t('Name')"
                truncateinput="false"
                type="text"
                usechip="false"
                validate-on="blur"
                variant="filled"
              />
            </v-col-stub>
            <v-col-stub
              class="px-1"
              cols="12"
              lg="false"
              md="false"
              sm="false"
              tag="div"
              xl="false"
              xxl="false"
            >
              <v-textarea-stub
                active="false"
                autofocus="false"
                autogrow="false"
                clearable="false"
                clearicon="$clear"
                counter="100"
                density="default"
                dirty="false"
                error="false"
                errormessages=""
                flat="false"
                focused="false"
                glow="false"
                hidedetails="false"
                hidespinbuttons="false"
                hint="(Optional)"
                iconcolor="false"
                loading="false"
                maxerrors="1"
                maxlength="100"
                messages=""
                modelmodifiers="[object Object]"
                modelvalue=""
                noresize="false"
                persistentclear="false"
                persistentcounter="false"
                persistenthint="true"
                persistentplaceholder="false"
                placeholder="Description"
                reverse="false"
                rows="3"
                rules=""
                singleline="false"
                tile="false"
                validateon="blur"
                variant="filled"
              />
            </v-col-stub>
          </v-row-stub>
        </v-form-stub>
        
      </div>
      <!--v-if-->
      <div
        class="px-3"
        data-v-44323e6a=""
      >
        
        
      </div>
    </div>
    <v-card-actions-stub
      class=""
      data-v-44323e6a=""
      tag="div"
    >
      
      <!--v-if-->
      <v-spacer-stub
        tag="div"
      />
      <evocon-v-button-stub
        color=""
        icon=""
        iconcolor=""
        text="Cancel"
        textclass=""
        type="secondary"
      />
      <evocon-v-button-stub
        color="primary"
        icon=""
        iconcolor=""
        text="Save"
        textclass=""
        type="primary"
      />
      
    </v-card-actions-stub>
  </v-card-stub>
  
</div>
`;

exports[`ReportsBookmarkForm > renders correctly when editing bookmark 1`] = `
<div
  data-v-app=""
>
  
  <dialog-toolbar-stub
    color="white"
    data-v-44323e6a=""
    iconcolor="secondary-text"
    title="Test bookmark"
    titleicon=""
  />
  <v-card-stub
    border="false"
    class="elevation-0"
    data-v-44323e6a=""
    density="default"
    disabled="false"
    exact="false"
    flat="false"
    hover="false"
    loading="false"
    replace="false"
    ripple="true"
    tag="div"
    tile="false"
    variant="elevated"
  >
    <div
      class="dialog-content"
      data-v-44323e6a=""
    >
      <div
        class="px-3"
        data-v-44323e6a=""
      >
        
        <v-form-stub
          disabled="false"
          fastfail="false"
          modelvalue="true"
          validateon="input"
        >
          <v-row-stub
            dense="false"
            density="default"
            nogutters="false"
            tag="div"
          >
            <v-col-stub
              class="px-1 mb-2"
              cols="12"
              lg="false"
              md="false"
              sm="false"
              tag="div"
              xl="false"
              xxl="false"
            >
              <evocon-v-input-stub
                counter="50"
                filled="true"
                grow="false"
                hint="Name"
                maxlength="50"
                modelmodifiers="[object Object]"
                modelvalue=""
                persistent-hint=""
                placeholder="Name"
                required=""
                rules="(v) => !!v || _ctx.$t('Name')"
                truncateinput="false"
                type="text"
                usechip="false"
                validate-on="blur"
                variant="filled"
              />
            </v-col-stub>
            <v-col-stub
              class="px-1"
              cols="12"
              lg="false"
              md="false"
              sm="false"
              tag="div"
              xl="false"
              xxl="false"
            >
              <v-textarea-stub
                active="false"
                autofocus="false"
                autogrow="false"
                clearable="false"
                clearicon="$clear"
                counter="100"
                density="default"
                dirty="false"
                error="false"
                errormessages=""
                flat="false"
                focused="false"
                glow="false"
                hidedetails="false"
                hidespinbuttons="false"
                hint="(Optional)"
                iconcolor="false"
                loading="false"
                maxerrors="1"
                maxlength="100"
                messages=""
                modelmodifiers="[object Object]"
                modelvalue=""
                noresize="false"
                persistentclear="false"
                persistentcounter="false"
                persistenthint="true"
                persistentplaceholder="false"
                placeholder="Description"
                reverse="false"
                rows="3"
                rules=""
                singleline="false"
                tile="false"
                validateon="blur"
                variant="filled"
              />
            </v-col-stub>
          </v-row-stub>
        </v-form-stub>
        
      </div>
      <!--v-if-->
      <div
        class="px-3"
        data-v-44323e6a=""
      >
        
        
      </div>
    </div>
    <v-card-actions-stub
      class=""
      data-v-44323e6a=""
      tag="div"
    >
      
      <delete-button-stub />
      <v-spacer-stub
        tag="div"
      />
      <evocon-v-button-stub
        color=""
        icon=""
        iconcolor=""
        text="Cancel"
        textclass=""
        type="secondary"
      />
      <evocon-v-button-stub
        color="primary"
        icon=""
        iconcolor=""
        text="Save"
        textclass=""
        type="primary"
      />
      
    </v-card-actions-stub>
  </v-card-stub>
  
</div>
`;
